--- a/navstevnici.html
+++ b/navstevnici.html
@@ -50,6 +50,17 @@
       }
     }
     </script>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DDCP0QYR9M"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-DDCP0QYR9M');
+    </script>
+
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link rel="modulepreload" href="./_app/immutable/start-e8718050.js">
@@ -136,7 +147,7 @@
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1x2cf53"]').parentNode,
-				version: "1683631506353",
+				version: "1683656565157",
 				hydrate: {
 					node_ids: [0, 9],
 					data: [null,null],
